--- a/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/YQMyFeedList.storyboard
+++ b/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/YQMyFeedList.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="IF5-ul-CNq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="IF5-ul-CNq">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,26 +13,26 @@
         <scene sceneID="6Zl-ot-mUZ">
             <objects>
                 <tableViewController id="IF5-ul-CNq" customClass="YQMyFeedListTVC" customModule="OpticalValleyUnite" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="79" sectionHeaderHeight="28" sectionFooterHeight="28" id="QY4-ou-w7Q">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="61" sectionHeaderHeight="28" sectionFooterHeight="28" id="QY4-ou-w7Q">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="feedBackCell" rowHeight="79" id="IiM-3H-xMg" customClass="YQMyFeedBackCell" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="79"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="feedBackCell" rowHeight="61" id="IiM-3H-xMg" customClass="YQMyFeedBackCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="61"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IiM-3H-xMg" id="fV9-8p-jFt">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="60.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sqL-9h-Rkq">
-                                            <rect key="frame" x="15" y="5" width="355" height="21"/>
+                                            <rect key="frame" x="5" y="5" width="365" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nfq-lg-sbj">
-                                            <rect key="frame" x="15" y="29" width="36" height="17"/>
+                                            <rect key="frame" x="334" y="29" width="36" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
@@ -40,10 +40,10 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="Nfq-lg-sbj" firstAttribute="top" secondItem="sqL-9h-Rkq" secondAttribute="bottom" constant="3" id="1ai-N5-iEd"/>
+                                        <constraint firstAttribute="trailing" secondItem="Nfq-lg-sbj" secondAttribute="trailing" constant="5" id="6Be-mw-DJV"/>
                                         <constraint firstItem="sqL-9h-Rkq" firstAttribute="top" secondItem="fV9-8p-jFt" secondAttribute="top" constant="5" id="Npl-E4-WO4"/>
                                         <constraint firstAttribute="trailing" secondItem="sqL-9h-Rkq" secondAttribute="trailing" constant="5" id="PZY-Jg-0Y3"/>
-                                        <constraint firstItem="sqL-9h-Rkq" firstAttribute="leading" secondItem="fV9-8p-jFt" secondAttribute="leading" constant="15" id="VlH-Gz-VIG"/>
-                                        <constraint firstItem="Nfq-lg-sbj" firstAttribute="leading" secondItem="fV9-8p-jFt" secondAttribute="leading" constant="15" id="cx1-hF-v78"/>
+                                        <constraint firstItem="sqL-9h-Rkq" firstAttribute="leading" secondItem="fV9-8p-jFt" secondAttribute="leading" constant="5" id="VlH-Gz-VIG"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -60,7 +60,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VHc-qf-2fr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-209" y="181"/>
+            <point key="canvasLocation" x="-210.40000000000001" y="180.35982008995504"/>
         </scene>
     </scenes>
 </document>
