--- a/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/YQShareViewController.xib
+++ b/OpticalValleyUnite/Classes/UI/PersonCore/ViewController/YQShareViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,14 +21,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EHH-ee-ujT">
-                    <rect key="frame" x="112" y="178.5" width="150" height="150"/>
+                    <rect key="frame" x="97" y="233.5" width="180" height="180"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="150" id="Qa9-Tq-h8l"/>
-                        <constraint firstAttribute="width" constant="150" id="kUZ-7R-Zqz"/>
+                        <constraint firstAttribute="height" constant="180" id="Qa9-Tq-h8l"/>
+                        <constraint firstAttribute="width" constant="180" id="kUZ-7R-Zqz"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="扫一扫,  下载APP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SB9-p6-mgY">
-                    <rect key="frame" x="121.5" y="338.5" width="132" height="21"/>
+                    <rect key="frame" x="121.5" y="423.5" width="132" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -38,7 +38,7 @@
             <constraints>
                 <constraint firstItem="SB9-p6-mgY" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Ojt-eU-UOF"/>
                 <constraint firstItem="SB9-p6-mgY" firstAttribute="top" secondItem="EHH-ee-ujT" secondAttribute="bottom" constant="10" id="flM-Vk-2cg"/>
-                <constraint firstItem="EHH-ee-ujT" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-80" id="kDO-Ks-onS"/>
+                <constraint firstItem="EHH-ee-ujT" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-10" id="kDO-Ks-onS"/>
                 <constraint firstItem="EHH-ee-ujT" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="njn-Ge-zXH"/>
             </constraints>
         </view>
